fix(ffe-form): Fix vertical alignment of ffe-tooltip
Changes line-height from 22px to 24px to better center the ?
vertically.

Fixes #731

--- a/packages/ffe-form/less/tooltip.less
+++ b/packages/ffe-form/less/tooltip.less
@@ -23,7 +23,7 @@
         cursor: help;
         display: inline-block;
         height: @ffe-tooltip-size;
-        line-height: 22px;
+        line-height: 24px;
         margin: 0 0 4px 13px;
         padding: 0 0 0 1px;
         text-align: center;
